src/index.css
@import "tailwindcss";

@layer base {
  html, body, #root {
    margin: 0;
    padding: 0;
    width: 100%;
    min-height: 100%;
    background-color: #F2F4F6;
  }

  .dark html, 
  .dark body, 
  .dark #root {
    background-color: #111111;
  }
}

@layer utilities {
  .custom-scrollbar::-webkit-scrollbar {
    width: 4px;
  }
  .custom-scrollbar::-webkit-scrollbar-track {
    background: transparent;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb {
    background: #E5E8EB;
    border-radius: 10px;
  }
  .dark .custom-scrollbar::-webkit-scrollbar-thumb {
    background: #333D4B;
  }
  .custom-scrollbar::-webkit-scrollbar-thumb:hover {
    background: #D1D6DB;
  }
  .dark .custom-scrollbar::-webkit-scrollbar-thumb:hover {
    background: #4E5968;
  }
}

